# flutter-paddle-ocr

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  native.cpp  ocr_crnn_process.cpp  ocr_db_post_process.cpp  ocr_db_post_process.h  ocr_ppredictor.cpp  ocr_ppredictor.h  ppredictor.cpp  ppredictor.h  predictor_input.cpp  predictor_input.h  predictor_output.cpp  predictor_output.h
android/src/main/java/com/baidu/paddle/lite/demo/ocr/: OCRPredictorNative.java
android/src/main/kotlin/com/huyphan/flutter_paddle_ocr/: FlutterPaddleOcrPlugin.kt  PaddleOcrEngine.kt
doc/: migration-v0.3-onnx.md
example/: .gitignore  .metadata  README.md  prepare_web.sh  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  mobile_bootstrap.dart  web_bootstrap.dart
example/web/: index.html  manifest.json
ios/: .gitignore  flutter_paddle_ocr.podspec  flutter_paddle_ocr_v5.podspec  flutter_paddleocr.podspec  flutter_paddleorc.podspec
ios/Classes/: FlutterPaddleOcrPlugin.swift  PaddleOcrEngine.h  PaddleOcrEngine.mm
ios/Classes/ppocr/: cls_process.cpp  cls_process.h  det_process.cpp  det_process.h  ort_predictor.cpp  ort_predictor.h  rec_process.cpp  rec_process.h  utils.cpp  utils.h
lib/: flutter_paddle_ocr.dart  flutter_paddle_ocr_method_channel.dart  flutter_paddle_ocr_platform_interface.dart  flutter_paddle_ocr_web.dart  flutter_paddleorc.dart
lib/src/: model_source.dart  models.dart
